--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://ashishsharmastudio:<bFAQEi6WGGGYhw>@cluster0.jas6sqk.mongodb.net/
+MONGO_URI=mongodb+srv://ashishsharmastudio:sharma1234@cluster0.jas6sqk.mongodb.net/
 TOKEN_SECRET=nextjsyoutube
 DOMAIN=http://localhost:3000
